--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" h1 href="#">The News</a>
+            <a class="navbar-brand font-weight-bold" h1 href="#">The News</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#newsMenu"
                 aria-controls="newsMenu" aria-expanded="false" aria-label="Tog">
                 <span class="navbar-toggler-icon"></span>
@@ -31,6 +31,17 @@
                 </div>
             </div>
         </nav>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h2 class="display-4">Get the latest trending news.</h2>
+                    <hr class="my-4">
+                    <p>Subscribe for the latest news.</p>
+                    <button type="button" class="btn btn-danger">Subscribe</button>
+                </div>
+            </div>
+        </div>
 
     </div>
 
