--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 col-s-12">
                 <div class="card">
-                    <img class="card-img-top" src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
+                    <img class="card-img-top"
+                        src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
                     <div class="card-body">
                         <h5 class="card-title">News Title</h5>
                         <p class="card-text">This is news description.</p>
@@ -70,7 +71,8 @@
             </div>
             <div class="col-md-4 col-sm-6 col-s-12">
                 <div class="card">
-                    <img class="card-img-top" src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
+                    <img class="card-img-top"
+                        src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
                     <div class="card-body">
                         <h5 class="card-title">News Title</h5>
                         <p class="card-text">This is news description.</p>
@@ -80,7 +82,8 @@
             </div>
             <div class="col-md-4 col-sm-6 col-s-12">
                 <div class="card">
-                    <img class="card-img-top" src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
+                    <img class="card-img-top"
+                        src="https://resize.indiatvnews.com/en/resize/newbucket/715_-/2020/10/breakingnews-live-blog-1568185450-1595123397-1601776308.jpg">
                     <div class="card-body">
                         <h5 class="card-title">News Title</h5>
                         <p class="card-text">This is news description.</p>
@@ -89,6 +92,90 @@
                 </div>
             </div>
         </div>
+
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <img src="https://images.news18.com/ibnlive/uploads/2019/09/news18-home-og.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="font-weight-bold">Drinking Coffee can improve Productivity</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed
+                            restrictions should be implemented perfectly, the Government Medical Officers’ Association
+                            Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed 
+                            perfectly, the Government Medical Officers’ Association
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-danger">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <img src="https://images.news18.com/ibnlive/uploads/2019/09/news18-home-og.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="font-weight-bold">Drinking Coffee can improve Productivity</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed
+                            restrictions should be implemented perfectly, the Government Medical Officers’ Association
+                            Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed 
+                            perfectly, the Government Medical Officers’ Association
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-danger">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <img src="https://images.news18.com/ibnlive/uploads/2019/09/news18-home-og.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="font-weight-bold">Drinking Coffee can improve Productivity</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed
+                            restrictions should be implemented perfectly, the Government Medical Officers’ Association
+                            Travel restrictions should be further tightened up to 80 to 90 per cent and the imposed 
+                            perfectly, the Government Medical Officers’ Association
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-danger">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
+
     </div>
 
 </body>
