contact form added

--- a/post.html
+++ b/post.html
@@ -86,6 +86,24 @@
 
         </div>
 
+        <div class="row mt-5">
+            <div class="col-lg-12 col-sm-12" >
+                <div class="h5">Contact Form</div>
+                <hr>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control" placeholder="Enter your email">
+                </div>
+                <button type="button" class="btn btn-danger">Submit</button>
+            </div>
+        </div>
+
+        <div class="row mt-5"></div>
+
     </div>
 </body>
 
